# hologramism

./: .gitignore  Package.swift  README.md
.github/workflows/: pages.yml
bindings/android/: .gitignore  README.md  settings.gradle.kts
bindings/android/hologramism/: build.gradle.kts
bindings/android/hologramism/src/main/cpp/: CMakeLists.txt  hlg_jni.c
bindings/browser/: README.md  package-lock.json  package.json
bindings/browser/pkg/: hlg_wasm.d.ts  hlg_wasm.js  hlg_wasm_bg.wasm  hlg_wasm_bg.wasm.d.ts  package.json
bindings/browser/src/: HologramCanvas.tsx  engine.ts  index.ts  scene.ts
bindings/flutter/: CHANGELOG.md  README.md  pubspec.yaml
bindings/flutter/android/: build.gradle
bindings/flutter/ios/: hologramism.podspec
bindings/flutter/lib/: hologramism.dart
bindings/ios/: README.md
bindings/react-native/: LICENSE  README.md  hologramism-react-native.podspec  hologramism.podspec  package.json
bindings/react-native/android/: build.gradle
bindings/react-native/ios/: HologramView.swift  HologramViewManager.m  HologramViewManager.swift
bindings/react-native/src/: index.tsx
examples/android/: .gitignore  README.md  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/browser/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/browser/src/: App.tsx
examples/flutter/: README.md  pubspec.yaml
examples/flutter/ios/: Podfile
examples/ios/: README.md
examples/react-native/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
(+40 files in other folders)
